--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         }
     ],
     "require": {
-        "phroute/phroute": "dev-master",
-        "plasticbrain/php-flash-messages": "dev-master"
+        "phroute/phroute": "dev-master"
     }
 }
