--- a/Configurations/db.ini
+++ b/Configurations/db.ini
@@ -1,3 +1,3 @@
-dsn="mysql:host=localhost;dbname=network_controll;charset=utf8"
-user="root"
-password=""
+dsn="mysql:host=localhost;dbname=linda;charset=utf8"
+user="linda"
+password="l1ndA"
